--- a/index.html
+++ b/index.html
@@ -6,6 +6,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- 각종메타 -->
 
+    <!-- 오픈그래픽 -->
+    <meta property="og:image" content="./images/og-img.jpg">
+    <meta property="og:url" content="https://jeoneunseo.github.io/megabox">
+    <meta property="og:title" content="전은서의 메가박스"> 
+    <meta property="og:description" content="MEGABOX">
+    
+    <!-- 트위터 카드 -->
+    <meta name="twitter:card" content="summary">
+    <meta name ="twitter:image" content="./images/og-img.jpg">
+    <meta name ="twitter:url" content="https://jeoneunseo.github.io/megabox">
+    <meta name ="twitter:title" content="전은서의 메가박스"> 
+    <meta name ="twitter:description" content="MEGABOX">
 
 
     <!-- favicon -->
@@ -843,6 +855,7 @@
             .poster .movie-contents a p{
                 overflow:hidden;
             }
+
         }
 
         @media (max-width:490px){
