--- a/curation.html
+++ b/curation.html
@@ -36,7 +36,7 @@
                 <li>- 상영타입 : 2D(자막)</li>
                 <li>- 개봉일 : 2021.12.23</li>
                 <li>- 감독 : 하마구치 류스케</li>
-                <li>- 드라마 / 179분</li>
+                <li>- 장르 : 드라마 / 179분</li>
                 <li>- 등급 : 15세이상관람가</li>
                 <li>- 출연진 : 니시지마 히데토시, 미우라 토코</li>
             </ul>
