--- a/index.html
+++ b/index.html
@@ -834,6 +834,23 @@
             position:relative;
         }
 
+
+        .footer-nav{
+            float:left;
+        }
+        .footer-nav li{
+            display:inline-block;
+            margin-right:1em;
+            color:#999;
+        }
+        .footer-nav li strong{
+            color:#000;
+        }
+        .cinema-search{
+            float:right;
+            color:#aaa;
+        }
+        
         
 
 
@@ -2793,7 +2810,28 @@
             </div>
         </section>
         <footer class="footer">
-            <div class="container"></div>
+            <div class="container">
+                <div class="in clearfix">
+                    <div class="footer-nav">
+                        <ul>
+                            <li><a href="#">회사소개</a></li>
+                            <li><a href="#">인재채용</a></li>
+                            <li><a href="#">사회공헌</a></li>
+                            <li><a href="#">제휴/광고/부대사업문의</a></li>
+                            <li><a href="#">이용약관</a></li>
+                            <li><a href="#">위치기반서비스 이용약관</a></li>
+                            <li><a href="#"><strong>개인정보처리방침</strong></a></li>
+                            <li><a href="#">윤리경영</a></li>
+
+                        </ul>
+                    </div>
+                    <div class="cinema-search">
+                        <i class="fas fa-search"></i>
+                        <span>극장찾기</span>
+                    </div>
+                </div>
+                <div class="in"></div>
+            </div>
         </footer>
     </section>
 
