--- a/index.html
+++ b/index.html
@@ -848,7 +848,11 @@
         }
         .cinema-search{
             float:right;
-            color:#aaa;
+            color:#000;
+            border:1px solid rgba(0,0,0,0.8);
+            padding:10px 30px;
+            border-radius:20px;
+            cursor: pointer;
         }
         
         
