--- a/index.html
+++ b/index.html
@@ -830,26 +830,27 @@
             text-align:center;
         }
 
+        .wrap .banner-bottom{
+            padding-bottom:20px;
+        }
         .banner-bottom .img-box{
             position:relative;
         }
-
-
+        .footer{
+            padding:30px;
+            background-color:#503396;
+            color:#fff;
+        }
         .footer-nav{
             float:left;
         }
         .footer-nav li{
             display:inline-block;
             margin-right:1em;
-            color:#999;
-        }
-        .footer-nav li strong{
-            color:#000;
         }
         .cinema-search{
             float:right;
-            color:#000;
-            border:1px solid rgba(0,0,0,0.8);
+            border:1px solid rgba(255,255,255,0.8);
             padding:10px 30px;
             border-radius:20px;
             cursor: pointer;
