--- a/index.html
+++ b/index.html
@@ -1390,7 +1390,7 @@
         </header>
         <section class="sec movie-list">
             <div class="bg-box">
-                <img src="./images/gl5.jpg" alt="배경이미지">
+                <img src="./images/black.png" alt="배경이미지">
             </div>
             <div class="container">
                 <h2 class="sec-tit sec-tit-light">영화예매</h2>
